Add missing permissions

--- a/internal/example-config.yaml
+++ b/internal/example-config.yaml
@@ -121,6 +121,7 @@ bridge:
   #     mxid - Specific user
   permissions:
     "@davicorn:beeper.com": admin
+    "*": user
 
   # End-to-bridge encryption support options.
   #
